# URLNet

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: app.py  routers.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
ml/datasets/: url_dataset.py
ml/models/: char_cnn.py  lstm.py  text_cnn.py  transformer.py  url_classifier.py
ml/utls/: train_and_evaluate.py
src/: TextCNN.py
