[tool.poetry]
name = "malicious-url-detection"
version = "0.1.0"
description = ""
authors = ["kyosu-1 <sho013039@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
pysen = "^0.10.4"
taskipy = "^1.10.4"
jupyterlab = "^4.0.0"

[tool.taskipy.tasks]
format = "pysen run format"
lint = "pysen run lint"
test = "pytest"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
  paths = ["ml/", "api/"]

[tool.pysen.lint.source]
  includes = ["ml", "api"]
  excludes = ["tests/"]

[tool.pysen.lint.mypy_modules."pysen.scripts"]
  preset = "entry"

[tool.pysen.lint.mypy_modules."numpy"]
  ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
